--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,8 @@
             "request": "launch",
             "program": "${workspaceFolder}/exporter.py",
             "args": [
-                "observe"
             ],
-            "cwd": "C:/Program Files (x86)/Steam/steamapps/common/Goodnight Meshmen/game/goodnight"
+            "cwd": "D:/Program Files (x86)/Steam/steamapps/common/Goodnight Meshmen/game/goodnight"
         },
         {
             "name": "kebabs addon observe",
