Improved multithreading safety in gui part
improved installation of godot-parser on blender side

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -57,9 +57,7 @@
             "name": "exporter.py",
             "type": "python",
             "request": "launch",
-            "module": "resources_exporter.exporter",
-            "console": "integratedTerminal",
-            // "args": ["export_all", "-i", "../resources","-o", "\"../project/resources/\"", "-g", "\"../project/\""]
-        },
+            "program": "exporter.py",
+        }
     ]
 }
